--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-<script src="/style/js/jquery.js"></script>
-</head>
-<body>
-Coucou Garorock
-</body>
+	<head>
+		<script src="/style/js/jquery.js"></script>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
+	</head>
+	<body>
+		Coucou Garorock
+	</body>
 </html>
