premier pas auth

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Garorock VIP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
     <link href="style/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <script src="style/jquery.js"></script>
+    <script src="style/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script src="style/jquery.js"></script>
-    <script src="style/js/bootstrap.min.js"></script>
+    <h1> Hello, world! </h1>
+
+    
+    <div class="formLogin">
+		<h4>Welcome in eCatalogue administration tool.</h4> 
+
+			<input type="text" name="mail" id="mail" class="span3" placeholder="votre adresse twitter" /><br>
+			
+			<input type="hidden" name="pwd" id="pwd"  value="" size=32>
+			<input type="button" name="submitbtn" value="identification">				
+
+	</div>
   </body>
 </html>
