--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Garorock VIP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <script src="style/jquery.js"></script>
+    <script src="style/js/jquery.js"></script>
     <script src="style/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <h1> Hello, world! </h1>
