--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<script>
+</script>
   <head>
     <title>Garorock VIP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +19,7 @@
 
 			<input class="form-control" type="text" name="mail" id="mail"  placeholder="votre adresse twitter" /><br>
 			
-			<input class="form-control" type="password" name="pwd" id="pwd"  placeholder="votre adresse twitter" size=32>
+			<input class="form-control" type="text" name="nom" id="nom"  placeholder="votre prenom" size=32>
 			
 			<div class="radio">
 			  <label>
@@ -34,6 +36,10 @@
 			
 			<input class="btn" type="button" name="submitbtn" value="Rejoindre l'équipe">				
 
+	</div>
+	
+	<div class="response">
+	
 	</div>
   </body>
 </html>
