amelioration graphisme page main

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
   			  </label>
   			</div>
   			
-  			<input class="btn" style="margin-left: 41%;" type="button" name="submitbtn" value="Rejoindre l'équipe">				
-      </div>
+        <div class="centerbtn">
+  			   <input class="btn" type="button" name="submitbtn" value="Rejoindre l'équipe">				
+        </div>
+     </div>
     </div>
 	
 	<div class="response">
